--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -1044,6 +1044,8 @@ literate=
 {⋰}{{\ucc{${\scriptstyle \riddots}$}}}{3}
 {ℓ}{{\ucc{$\ell$}}}{1}
 {§}{{\ucc{\S}}}{1}
+{⟨}{{\ucc{${\langle}$}}}{1}
+{⟩}{{\ucc{${\rangle}$}}}{1}
 %
 % box drawing characters
 %
