Add annotated code for tracking translation

--- a/thesis/automatic_graph_tracking.tex
+++ b/thesis/automatic_graph_tracking.tex
@@ -48,13 +48,14 @@ and control flow shall be preserved as well.  Hence, we call this structure \emp
 \section{Extended Wengert Lists}
 \label{sec:exteded-wengert-lists}
 
-The extended Wengert list structure is implemented in Julia through an abstract supertype with
-several concrete subtypes for the different kinds of nodes.  Additionally, there are special types
-for the tape- and block references, and an expression type mimicking the built-in \jlinl{Expr}, but
-adding more semantic distinctions (such as between references and constants, and between primitive
-and non-primitive function calls).  On top of this, an API to query the graph structure is provided,
-allowing, for example, to find all children or parents of a tape refererence up to a certain depth,
-or extract data from nodes, such as referenced variables, arguments, or metadata.
+The extended Wengert list structure is implemented in Julia through nested objects of an abstract
+supertype \jlinl{AbstractNode}, with several concrete subtypes for the different kinds of nodes.
+Additionally, there are special types for the tape- and block references, and an expression type
+\jlinl{TapeExpression}, mimicking the built-in \jlinl{Expr}, but adding more semantic distinctions
+(such as between references and constants, and between primitive and non-primitive function calls).
+On top of this, an API to query the graph structure is provided, allowing, for example, to find all
+children or parents of a tape refererence up to a certain depth, or extract data from nodes, such as
+referenced variables, arguments, or metadata.
 
 \begin{figure}[t]
   \centering
@@ -67,14 +68,14 @@ or extract data from nodes, such as referenced variables, arguments, or metadata
 \end{figure}
 
 Figure~\ref{fig:ext-wengert-list} illustrates the resulting extended Wengert list for one run of a
-short stochastic function \jlinl{geom}:
+short stochastic function:
 \begin{lstlisting}
 geom(n, beta) = rand() < beta ? n : geom(n + 1, beta)
 \end{lstlisting}
 (for readability, recorded to only three levels of nesting).  The function draws a sample from the
 geometric distribution with parameter \jlinl{beta}, starting to count at value \jlinl{n}. On the
 left, we have its IR in textual form, consisting of two blocks. The central part is the graph of
-nested nodes. There, values and jumps from the top-level call are recorded in their encountered
+nested nodes.  There, values and jumps from the top-level call are recorded in their encountered
 order, as nodes with \enquote{tape references} \jlinl{@1} to \jlinl{@9}. SSA variables (\jlinl{\%i})
 occurring in expressions of SSA definitions are also replaced in the nodes by the respective tape
 references.  Each node is linked to the original IR statement it records, as indicated by the red
@@ -100,21 +101,47 @@ nodes it depends on.
 \section{Automatic Graph Tracking}
 \label{sec:autom-graph-track}
 
+Recording an extended Wengert list requires to record all block arguments, SSA definitions, and
+taken branches, with their actual values and metadata. This is achieved by extending the IR with new
+statements creating nodes and recording them on the extended Wengert list structure described
+above. Care needs to be taken to properly record function calls, since we need to ensure that
+non-primitive functions are recursively tracked.   
 
-% as nodes on an extended Wengert list, together with relevant
-% metadata. The resulting IR consists of about three to five times as many statements as the
-% original. Note that the transformation, due to JIT compilation, is done at most once per
-% method and then stored as compiled code. However, the tracking happens at every execution
-% during runtime.
-% Recording an extended Wengert list requires to record all block arguments, SSA definitions,
-% and taken branches, with their actual values and metadata. This is achieved by extending the
-% IR with new statements creating nodes and recording them on a helper data structure. Care
-% needs to be taken to properly record function calls, since we need to ensure that non-primitive
-% functions are recursively tracked. As a special case, all return branches are converted to
-% unconditional jumps to one new block at the end, which contains a single unified return
-% statement. This way, they can be treated in the same way as other branches. Please see the
-% appendix for a pseudo-code specification of the IR transformation in Algorithm 1, and the
-% transformed code for the geom function in Figure 3.
+The transformed code of the example function geom, whose IR is displayed in
+figure~\ref{fig:ext-wengert-list} above, is displayed in listing~\ref{lst:geom-tracked}.  First, a
+\enquote{graph recorder} object is set up in the extra argument \jlinl{\%5}.  In this, the original
+IR is stored.  Subsequently, every statement is replaced by a call to one of the
+\protect\jlinl{trackedX} functions, to which both the function and its arguments, wrapped into
+\jlinl{TapeExpression}s directly (for constants) or indirectly (through \jlinl{trackedvariable} and
+\jlinl{trackedargument}, which preserve the symbolic mapping to SSA variables).  The \jlinl{record!}
+function takes care of constructing the child node of the possibly nested call, and storing them on
+the recorder object.
+
+Branches, tracked with \jlinl{trackejump} and \jlinl{trackedreturn}, cannot be stored on the
+recorder object before they are taken, of course.  The solution is to first construct the respective
+nodes of all possible branches of a block, and adding them as an extra argument to the branches
+taken.  Then, in each target branch, the jump node from which the branch originated is recorded
+immediately.  As a special case, all return branches are converted to unconditional jumps to one new
+block at the end, which contains a single unified return statement.  This way, they can be treated
+in the same way as other branches.
+
+The resulting IR consists of about three to five times as many statements as the original.  The
+transformation, due to JIT compilation, is performed at most once per method and then stored as
+compiled code.  However, the tracking~-- the recording of all statements in the extended Wengert
+list structure~-- happens at every execution during runtime.
+
+\begin{lstfloat}[p]
+  \hrule
+  \includegraphics[width=\textwidth]{figures/translation}
+  \hrule
+  \caption{Tracked IR of the method \protect\jlinl{geom(::Int, ::Float64)}.  Parts corresponding to
+    original IR are highlighted in matching colors.}
+  \label{lst:geom-tracked}
+\end{lstfloat}
+\todo{make sure the figure in on same spread as explanation}
+
+Please see the appendix for a pseudo-code specification of the IR transformation in Algorithm 1, and
+the transformed code for the geom function in Figure 3.\todo{describe algorithm}
 
 \begin{algorithm}[p]
   \hrule\footnotesize
@@ -190,58 +217,7 @@ nodes it depends on.
   \caption{IR transformation to record an extended Wengert list (simplified) \label{alg:ir-transform}}
 \end{algorithm}
 
-\begin{lstfloat}[p]
-\begin{lstlisting}[style=lstfloat]
-1: (%4, %5, %1, %2, %3)
-  %6 = saveir!(%5, <original IR>)
-  %7 = TapeConstant(%1)
-  %8 = trackedargument(%5, %7, nothing, 1, $(QuoteNode(§1:%1)))
-  %9 = record!(%5, %8)
-  %10 = TapeConstant(%2)
-  %11 = trackedargument(%5, %10, nothing, 2, $(QuoteNode(§1:%2)))
-  %12 = record!(%5, %11)
-  %13 = TapeConstant(%3)
-  %14 = trackedargument(%5, %13, nothing, 2, $(QuoteNode(§1:%3)))
-  %15 = record!(%5, %14)
-  %16 = TapeConstant(Main.rand)
-  %17 = Base.tuple()
-  %18 = trackedcall(%5, %16, %17, $(QuoteNode(§1:%4)))
-  %19 = record!(%5, %18)
-  %20 = TapeConstant(Main.:<)
-  %21 = trackedvariable(%5, $(QuoteNode(%4)), %19)
-  %22 = trackedvariable(%5, $(QuoteNode(%3)), %3)
-  %23 = Base.tuple(%21, %22)
-  %24 = trackedcall(%5, %20, %23, $(QuoteNode(§1:%5)))
-  %25 = record!(%5, %24)
-  %26 = Base.tuple()
-  %27 = trackedvariable(%5, $(QuoteNode(%5)), %25)
-  %28 = trackedjump(%5, 2, %26, %27, $(QuoteNode(§1:&1)))
-  %29 = trackedvariable(%5, $(QuoteNode(%2)), %2)
-  %30 = trackedreturn(%5, %29, $(QuoteNode(§1:&2)))
-  br 2 (%28) unless %25
-  br 3 (%2, %30)
-2: (%31)
-  %32 = record!(%5, %31)
-  %33 = TapeConstant(Main.:+)
-  %34 = trackedvariable(%5, $(QuoteNode(%2)), %2)
-  %35 = Base.tuple(%34, $(QuoteNode(⟨1⟩)))
-  %36 = trackedcall(%5, %33, %35, $(QuoteNode(§2:%6)))
-  %37 = record!(%5, %36)
-  %38 = TapeConstant(Main.geom)
-  %39 = trackedvariable(%5, $(QuoteNode(%6)), %37)
-  %40 = trackedvariable(%5, $(QuoteNode(%3)), %3)
-  %41 = Base.tuple(%39, %40)
-  %42 = trackedcall(%5, %38, %41, $(QuoteNode(§2:%7)))
-  %43 = record!(%5, %42)
-  %44 = trackedvariable(%5, $(QuoteNode(%7)), %43)
-  %45 = trackedreturn(%5, %44, $(QuoteNode(§2:&1)))
-  br 3 (%43, %45)
-3: (%46, %47)
-  %48 = record!(%5, %47)
-  return %46
-\end{lstlisting}
-  \caption{Tracked code of the method \protect\jlinl{geom(::Int, ::Float64)}.\label{lst:geom-tracked}}
-\end{lstfloat}
+
 
 
 \section{Evaluation}
