--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -707,7 +707,8 @@ inferred.
 └───       return %48
 \end{lstlisting}
   \caption{Typed and optimized code of the call \protect\jlinl{foo([1.0])} in SSA form, as obtained
-    through \protect\jlinl{@code_typed}.\label{lst:foo-typed}}
+    through \protect\jlinl{@code_typed} (the extra lines are due to the formatting of
+    \protect\jlinl{CodeInfo}).\label{lst:foo-typed}}
 \end{lstfloat}
 
 The last step of compilation within Julia consists of inlining and optimizing the typed intermediate
