Update computation graph figures

--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -732,10 +732,11 @@ as well as stored for later usage as part of the just-in-time compilation mechan
 
 \begin{figure}[t]
   \centering
-  \subbottom[Forward mode graph.]{\includegraphics[width=\textwidth]{figures/comp-graph}}
+  \subbottom[Forward mode.]{\includegraphics[width=0.49\textwidth]{figures/comp-graph}}
   \bigskip
-  \subbottom[Backward graph.]{\includegraphics[width=\textwidth]{figures/comp-graph-backward}}
-  \caption{Text}
+  \subbottom[Backward mode.]{\includegraphics[width=0.49\textwidth]{figures/comp-graph-backward}}
+  \caption{Computation graph and intermediate expressions of the expression \protect\jlinl{sin(x) -
+      y}, together with the derivative graphs in forward- and backward mode.}
   \label{fig:comp-graph}
 \end{figure}
 
